- Adaugare functionalitate login, register - Conectarea functionalitatilor cu noua interfata user